RESOLVED FIXED303125
SVGLength.valueAsString should throw SyntaxError for empty strings
https://bugs.webkit.org/show_bug.cgi?id=303125
Summary SVGLength.valueAsString should throw SyntaxError for empty strings
Ahmad Saleem
Reported 2025-11-25 23:29:35 PST
ssia - we should align with other browsers.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-25 23:29:42 PST
Ahmad Saleem
Comment 2 2025-11-25 23:32:42 PST
EWS
Comment 3 2025-11-27 00:21:16 PST
Committed 303594@main (a88e27a8c6a3): <https://commits.webkit.org/303594@main> Reviewed commits have been landed. Closing PR #54471 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.