SVGLength.valueAsString should throw SyntaxError for empty strings https://bugs.webkit.org/show_bug.cgi?id=303125 rdar://165429393

Reviewed by Anne van Kesteren.

The SVGLength.valueAsString setter was incorrectly accepting empty
strings and returning success, when it should throw a SyntaxError
according to the SVG specification [1]. An empty string fails to parse
as [ <number> | <length> | <percentage> ], so per the spec's step 4
("If parsing failed, then throw a SyntaxError"), an exception must
be thrown.

This change makes SVGLengthValue::setValueAsString() throw a
SyntaxError when given an empty string, aligning with the expected
behavior and matching other browsers engines (Blink / Chromium and
Gecko / Firefox).

[1] https://svgwg.org/svg2-draft/types.html#__svg__SVGLength__valueAsString

* Source/WebCore/svg/SVGLengthValue.cpp:
(WebCore::SVGLengthValue::setValueAsString):

> Progressions:
* LayoutTests/svg/dom/valueAsString-null-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/svg/types/scripted/SVGLength-expected.txt:

> Rebaselines:
* LayoutTests/svg/custom/invalid-length-units-expected.txt:
* LayoutTests/svg/parser/whitespace-length-invalid-1-expected.txt:
* LayoutTests/svg/parser/whitespace-length-invalid-2-expected.txt:
* LayoutTests/svg/parser/whitespace-length-invalid-3-expected.txt:
* LayoutTests/svg/parser/whitespace-length-invalid-4-expected.txt:

Canonical link: https://commits.webkit.org/303594@main